# svox-pico

./: .gitignore  Android.bp  Android.mk  AndroidManifest.xml  README.md  ThirdPartyProject.prop  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__picoacph.html  group__picoapi.html  group__picobase.html  group__picocep.html  group__picoctrl.html  group__picodata.html  group__picodbg.html  group__picofft.html  group__picokdt.html  group__picokfst.html  group__picoknow.html  group__picokpdf.html  group__picokpr.html  group__picoktab.html  group__picolex.html  group__picoos.html  group__picopam.html  group__picopr.html  group__picorsrc.html  group__picosa.html  group__picosig.html  group__picospho.html  group__picotok.html  (+271 more)
apidocs/: Doxygen
lib/: meson.build  picoacph.c  picoapi.c  picoapi.h  picoctrl.c  picodata.h  picokdbg.c  picokpr.c  picoktab.c  picopltf.h  picopr.c  picosa.c  picosig.c  picosig2.h  picotok.c
pico/: .gitignore  Android.mk  AndroidManifest.xml  meson.build
pico/compat/include/: TtsEngine.h
pico/compat/jni/: Android.mk  com_android_tts_compat_SynthProxy.cpp
pico/compat/src/com/android/tts/compat/: CompatTtsService.java  SynthProxy.java
pico/lang/: PicoLangDeDeInSystem.mk  PicoLangDefaultInSystem.mk  PicoLangEnGBInSystem.mk  PicoLangEnUsInSystem.mk  PicoLangEsEsInSystem.mk  PicoLangFrFrInSystem.mk  PicoLangItItInSystem.mk
pico/lib/: meson.build  picoacph.c  picoapi.c  picoapi.h  picocep.c  picoctrl.c  picoctrl.h  picodata.c  picodefs.h  picoklex.c  picopam.c  picopr.c  picorsrc.c  picosa.c  picosig.c  picosig2.c  picosig2.h  picospho.c  picotok.c  picowa.c
pico/lingware/textana/en-US/: en-US_lexpos.utf
pico/lingware/tools/: buildbin.sh  buildpkb.sh  picoloadphones.py  picoloadpos.py  symboltable.py
pico/res/layout/: main.xml
pico/res/values/: strings.xml
pico/src/com/svox/pico/: CheckVoiceData.java  EngineSettings.java
pico/tests/data/: xsampa_pico_man_de-DE.txt  xsampa_pico_man_en-GB.txt  xsampa_pico_man_en-US.txt  xsampa_pico_man_es-ES.txt  xsampa_pico_man_fr-FR.txt  xsampa_pico_man_it-IT.txt
pico/tts/: com_svox_picottsengine.cpp  svox_ssml_parser.cpp  svox_ssml_parser.h
picolanginstaller/: AndroidManifest.xml
search/: all_0.js  all_1.js  all_2.js  all_3.js  (+40 more)
(+73 files in other folders)
